# Cost-Aware-LLM-Routing-System

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements-ml.txt  requirements.txt
config/: default.yaml  development.yaml  models.yaml  production.yaml  routing_rules.yaml
demo/: sample_prompts.json  streamlit_app.py
docker/: Dockerfile.api  Dockerfile.triton  docker-compose.yaml  prometheus.yml
docs/: TRITON_TENSORRT_ROUTER.md
models/router/: router.onnx  router_metadata.json
scripts/: check_triton_router.py  run_demo.py
src/: __init__.py
src/api/: app.py  dependencies.py  middleware.py  schemas.py
src/config/: __init__.py  model_registry.py  settings.py
src/cost/: __init__.py  calculator.py  storage.py  tracker.py
src/inference/: __init__.py  pipeline.py  preprocessor.py
src/models/: __init__.py  base.py  mock_backend.py  triton_backend.py
src/monitoring/: __init__.py  logger.py  prometheus_metrics.py
src/optimization/: __init__.py  benchmark.py  convert_tensorrt.py  export_onnx.py
src/router/: __init__.py  complexity_classifier.py  feature_extractor.py  feature_vector.py  routing_engine.py  threshold_manager.py  triton_classifier.py
src/triton/: __init__.py  bls_router.py
src/utils/: timing.py  tokenizer.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/benchmarks/: test_cost_savings.py  test_routing_latency.py
tests/integration/: test_api.py  (+1 more)
training/: evaluate_router.py  export_feature_router_onnx.py  export_model.py  prepare_dataset.py  train_feature_router.py  train_router.py
(+20 files in other folders)
